--- a/src/Uploader.Core/Uploader.Core.csproj
+++ b/src/Uploader.Core/Uploader.Core.csproj
@@ -5,12 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Queries" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="CsvHelper" Version="12.1.2" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+      <PackageReference Include="Mapster" Version="5.3.1" />
       <PackageReference Include="MediatR" Version="8.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     </ItemGroup>
